Refs #13905 !strict. Minor cosmetic fixes. Slightly adjusted alignment of IconContainer's close button. Fixed Overlay's styles and test files so that the content is correctly center-aligned on desktop browsers.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@26842 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/blackberry/variables.less
+++ b/mobile/themes/blackberry/variables.less
@@ -393,7 +393,6 @@
 	height: 0px;
 }
 .mblIconItemSub-styles () {
-	margin-left: -10px;
 	background-color: white;
 	color: black;
 }
@@ -411,14 +410,14 @@
 .mblIconContentHeading-styles () {
 	margin-top: 0px;
 	padding-left: 40px;
-	height: 30px;
+	height: 25px;
 	border-top: 1px solid #F1F3F4;
 	border-bottom: 1px solid #717D85;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#E0E4E7), to(#B4BEC6), color-stop(0.5, #C4CCD2), color-stop(0.5, #BFC8CE));
 	font-family: Helvetica;
 	font-size: 16px;
 	color: white;
-	line-height: 32px;
+	line-height: 26px;
 	text-shadow: rgba(0,0,0,0.6) 0px -1px 0px;
 }
 
